fixed click and deselect issue

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <button id="start-button" class="js-button" onclick="window.location.href = 'team-select.html'">START</button>
+        <button id="start-button" class="js-button" onclick="localStorage.clear(); window.location.href = 'team-select.html'">START</button>
     </div>
     <!-- scripts -->
     <script src="script/sounds.js"></script>
