--- a/team-select.html
+++ b/team-select.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="team-select">
-        <div class="team terrorist" onclick="selectedTeam('terrorists')"><p>Terrorist</p></div>
-        <div class="team auto-select" onclick="randomTeam()"><p>Auto Select</p></div>
-        <div class="team counter-terrorist" onclick="selectedTeam('counter-terrorists')"><p>Counter Terrorist</p></div>
+        <div class="team terrorist" onclick="playClickAudio(); selectedTeam('terrorists')"><p>Terrorist</p></div>
+        <div class="team auto-select" onclick="playClickAudio(); randomTeam()"><p>Auto Select</p></div>
+        <div class="team counter-terrorist" onclick="playClickAudio(); selectedTeam('counter-terrorists')"><p>Counter Terrorist</p></div>
     </div>
     <!-- scripts -->
     <script src="script/sounds.js"></script>
