--- a/agent-select.html
+++ b/agent-select.html
@@ -14,6 +14,9 @@
     <div class="choose-name">
         <p>Choose Name: </p> <input type="text" name="name" id="input-name">
     </div>
+    <div class="advance-button">
+        <button onclick="" id="next-button">Select and Advance</button>
+    </div>
     <!-- scripts -->
     <script src="script/sounds.js"></script>
     <script src="script/main.js"></script>
