Completed until agent selection
Completed until agent selection and validated inputs

--- a/agent-select.html
+++ b/agent-select.html
@@ -14,8 +14,9 @@
     <div class="choose-name">
         <p>Choose Name: </p> <input type="text" name="name" id="input-name">
     </div>
+    <div id="errorMessageContainer"><span id="errorMessage"></span></div>
     <div class="advance-button">
-        <button onclick="" id="next-button">Select and Advance</button>
+        <button onclick="goToWeaponSelection()" id="nextButton">Select and Advance</button>
     </div>
     <!-- scripts -->
     <script src="script/sounds.js"></script>
