--- a/weapon-select.html
+++ b/weapon-select.html
@@ -21,6 +21,7 @@
     <div id="weaponContainer" class="weapon-container"></div>
     <div class="advance-button">
         <button onclick="" id="nextButton">Select and Advance</button>
+        <div id="balance" class="balance"><span>$</span></div>
     </div>
     <!-- scripts -->
     <script src="script/sounds.js"></script>
