Validated weapon selection

--- a/weapon-select.html
+++ b/weapon-select.html
@@ -6,6 +6,9 @@
     <title>CSGO: Team Builder</title>
     <link rel="shortcut icon" href="assets/Images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="stylesheet/weapon-select.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
 <body onload="">
     <div class="heading" id="heading">Choose Weapons: Counter Terrorist</div>
@@ -21,7 +24,7 @@
     <div id="weaponClass" class="weapon-class"></div>
     <div id="weaponContainer" class="weapon-container"></div>
     <div class="advance-button">
-        <button onclick="" id="nextButton">Select and Advance</button>
+        <button onclick="validateWeaponSelection()" id="nextButton">Select and Advance</button>
     </div>
     <!-- scripts -->
     <script src="script/sounds.js"></script>
