halfway done at displaying agent details from user.

--- a/weapon-select.html
+++ b/weapon-select.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
-<body onload="">
+<body>
     <div class="heading" id="heading">Choose Weapons: Counter Terrorist</div>
     <div id="balance" class="balance"><span>$</span></div>
     <div class="weapon-screen" id="weaponScreen">
