--- a/weapon-select.html
+++ b/weapon-select.html
@@ -10,9 +10,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body onload="onloadWeaponSelection()">
     <div class="heading" id="heading">Choose Weapons: Counter Terrorist</div>
     <div id="balance" class="balance"><span>$</span></div>
+    <p id="errorMessage"></p>
     <div class="weapon-screen" id="weaponScreen">
         <div class="weapon-category">Gloves</div>
         <div class="weapon-category">Knives</div>
